# eurostat_downloader

./: .gitignore  LICENSE  Makefile  README.html  README.md  __init__.py  eurostat_downloader.py  eurostat_downloader_dialog.py  eurostat_downloader_dialog_base.ui  metadata.txt  pavement.py  pb_tool.cfg  pylintrc  pyproject.toml  requirements.txt  resources.py  resources.qrc
help/source/: conf.py  index.rst
src/: __init__.py  data.py  enums.py  eurostat_data.py  eurostat_downloader.py  eurostat_downloader_dialog.py  eurostat_downloader_dialog.ui  modules.py  pyqt_utils.py  settings.py  ui.py  utils.py
src/src/: eurostat_downloader.ui  eurostat_downloader_dialog.py
src/ui/: section_dialog_params.ui
test/: test_eurostat_downloader_dialog.py  test_resources.py
ui/: README.md  eurostat_downloader_dialog.ui  missing_modules.ui  section_dialog_params.ui  section_dialog_time.ui  settings_dialog.ui
